bug 498433 Add [ ] to the EscapeURI whitelist, so that IPv6 literals get serialized correctly. r+sr=bz